# personal-finance-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_users.py  0003_extend_assets.py
app/: main.py
app/api/v1/endpoints/: auth.py  forecasts.py  portfolio.py  transactions.py
app/core/: config.py  logging.py  security.py
app/db/: models.py  session.py
app/ml/: __init__.py  anomaly.py  categorizer.py  forecast.py
app/pipelines/: ingest.py  scheduler.py  validate.py
data/: portfolio.csv  transactions.csv
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: calendar.tsx  date-range-picker.tsx  popover.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: DashboardPage.tsx  ForecastsPage.tsx  LoginPage.tsx  PortfolioPage.tsx  TransactionsPage.tsx
scripts/: load_portfolio.py  run_ml_pipeline.py
tests/: conftest.py  test_health.py
tests/integration/: test_auth.py  test_forecasts.py  test_portfolio.py  test_transactions.py
tests/unit/: test_anomaly.py  test_forecast.py  test_validate.py
