[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-intelligence-platform"
version = "0.1.0"
description = "Financial intelligence platform with ML-powered insights"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "yfinance>=0.2.50",
    "prophet>=1.1.6",
    "scikit-learn>=1.6.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "apscheduler>=3.10.4",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["app"]
omit = [
    # Uses PostgreSQL-specific pg_insert dialect; cannot run against SQLite
    "app/pipelines/ingest.py",
    # APScheduler lifecycle code; exercised by the scheduler job tests
    "app/pipelines/scheduler.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# =============================================================================
# Ruff — linter and formatter
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes  I: isort  UP: pyupgrade
select = ["E", "F", "I", "UP", "W"]
ignore = [
    "E501",   # line-too-long — formatter handles this
    "UP007",  # use X | Y instead of Optional — keep Optional for clarity
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
